<resources>
    <string name="app_name">Mystrace</string>
    <string name="format_your_account_is_login_on_device">Your account is already logged in on\"%s\"</string>
    <string name="your_account_is_login_on_other_device">Your account has been logged in on another mobile phone.</string>
    <string name="logout_msg">Offline notification</string>
    <string name="exit">Log in</string>
    <string name="ble_need_location_information">Bluetooth features require your location permissions</string>
    <string name="do_not_open">Temporarily not open</string>
    <string name="ble_cannot_work_normally">Bluetooth feature is not working properly for the time being</string>
    <string name="go_to_open">Go to open</string>
    <string name="open_bluetooth">Open</string>
    <string name="bluetooth_not_open">Bluetooth is not open</string>
    <string name="please_wait">Please wait</string>
    <string name="activity_bracelet_pair_please_bond_again">Please rebind the mystrace</string>
    <string name="caution">Caution</string>
    <string name="phone_do_not_support_bluetooth">Phone does not support Bluetooth devices</string>
    <string name="activity_ble_please_open_ble">Please turn on Bluetooth, or you will not be able to use it</string>
    <string name="activity_ble_open_ble">Open bluetooth</string>
    <string name="set_success">Set success</string>
    <string name="submit">Submit</string>
    <string name="sure">Sure</string>
    <string name="cancel">Cancel</string>
    <string name="man">Male</string>
    <string name="woman">Female</string>
    <string name="sunday">SUN</string>
    <string name="monday">MON</string>
    <string name="tuesday">TUE</string>
    <string name="wednesday">WED</string>
    <string name="thursday">THU</string>
    <string name="friday">FRI</string>
    <string name="saturday">SAT</string>
    <string name="begin_time">Start time</string>
    <string name="end_time">End time</string>
    <string name="notification">Notification</string>
    <string name="sheet_camera">Camera</string>
    <string name="sheet_photo_album">Album</string>
    <string name="activity_enter_skip">Skip</string>
    <string name="activity_enter_experience_immediately">Experience</string>
    <string name="activity_login_hello">Login</string>
    <string name="activity_login_welcome">Welcome to Mystrace!</string>
    <string name="activity_login_register">Create Account</string>
    <string name="activity_login_zone">Country/Region</string>
    <string name="activity_login_zone_default_country">China</string>
    <string name="activity_login_zone_default_number">+86</string>
    <string name="activity_login_please_input_phone_number">Phone</string>
    <string name="activity_login_please_input_password">Password</string>
    <string name="activity_login_login">Login</string>
    <string name="activity_login_login_quickly">Quick Login</string>
    <string name="activity_login_forget_password">Forgot password</string>
    <string name="phone_password_is_empty">Wrong user name or password</string>
    <string name="activity_base_password_error">Wrong password</string>
    <string name="activity_base_please_login_again">Please login again</string>
    <string name="login_again">Login again</string>
    <string name="activity_register_title">Register</string>
    <string name="activity_register_zone">Country/Region</string>
    <string name="activity_register_zone_default_number">+86</string>
    <string name="activity_register_please_input_phone_number">Phone Number</string>
    <string name="activity_register_please_input_password">Password</string>
    <string name="activity_register_please_input_verification_code">Verification Code</string>
    <string name="activity_register_get_verification_code">Send</string>
    <string name="activity_register_agree_user_protocol">I have read and agree to </string>
    <string name="activity_register_user_protocol">the Mystrace User Agreement</string>
    <string name="activity_register_register">Create Account</string>
    <string name="activity_register_second_left">%ds</string>
    <string name="activity_register_please_input_correct_phone_number">Please input correct phone number</string>
    <string name="activity_register_password_is_too_short">Password cannot be less than 6 characters.</string>
    <string name="country_select_phone_location">Select country or region</string>
    <string name="reset_password">Reset Password</string>
    <string name="reset_password_get_verification_code">Send</string>
    <string name="reset_password_second_left">%ds</string>
    <string name="reset_password_input_correct_phone_number">The format of phone number is not correct!</string>
    <string name="reset_password_input_password">Password</string>
    <string name="reset_password_success">Success</string>
    <string name="reset_password_submit">Reset</string>
    <string name="fragment_personal_info_init_necessary_please_input_correct_info">The calculation of health data depends on the following information, please enter it accurately</string>
    <string name="fragment_personal_info_init_necessary_please_input_name">Name</string>
    <string name="fragment_personal_info_init_necessary_please_input_birthday">Select your date of birth</string>
    <string name="fragment_personal_info_init_necessary_please_input_height">Height</string>
    <string name="fragment_personal_info_init_necessary_please_input_weight">Weight</string>
    <string name="fragment_personal_info_init_necessary_please_input_next_step">Next</string>
    <string name="fragment_personal_info_init_unnecessary_please_input_correct_info">The calculation of health data depends on the following information, please enter it accurately</string>
    <string name="fragment_personal_info_init_unnecessary_bp_type">Hypertension</string>
    <string name="fragment_personal_info_init_unnecessary_multiple_choice">(Multiple)</string>
    <string name="fragment_personal_info_init_unnecessary_clinical">Clinical Diseases</string>
    <string name="fragment_personal_info_init_unnecessary_organ_damage">Organ Damage</string>
    <string name="fragment_personal_info_init_unnecessary_other">Other</string>
    <string name="activity_main_bottom_home">Home</string>
    <string name="activity_main_bottom_health_manage">Health</string>
    <string name="activity_main_bottom_friend">Friends</string>
    <string name="activity_main_bottom_me">Profile</string>
    <string name="home_time">Time</string>
    <string name="home_kind"></string>
    <string name="home_medicine_need_to_take">Need to take medication</string>
    <string name="home_no_kind_of_medicine">No Data</string>
    <string name="home_reminder">Medication Reminder</string>
    <string name="health_manage_title">Health Management</string>
    <string name="health_manage_bp_goal">Blood Pressure Target</string>
    <string name="health_manage_bp_unit">mmHg</string>
    <string name="health_manage_not_achieve">Abnormal</string>
    <string name="health_manage_achieve">Normal</string>
    <string name="health_manage_day_unit">day(s)</string>
    <string name="health_manage_medication_plan">Medication Schedule</string>
    <string name="health_manage_abnormal_record">Blood Pressure Notifications</string>
    <string name="health_manage_sport">Activity</string>
    <string name="health_manage_health_knowledge">Health Articles</string>
    <string name="health_manage_insufficient_data">Insufficient data</string>
    <string name="health_manage_suggest">The target of blood pressure control is based on your personal information, medical history, and comprehensive evaluation through a data model. \ nIn order to ensure the accuracy of the evaluation, please update your personal information in "Settings" if there is any change occurred. \ nPlease ensure that you measure at least three times a day at different time periods, otherwise you will not be able to know whether you have achieved the target due to insufficient data. \ nIf you exceed the control range of blood pressure frequently, please consult a doctor in time.</string>
    <string name="history_pw_list_title">Records</string>
    <string name="history_bp_en_short">BP</string>
    <string name="history_hr_en_short">HR</string>
    <string name="friend_i_monitor">Monitor</string>
    <string name="friend_monitor_me">Monitored</string>
    <string name="friend_title">Friends</string>
    <string name="friend_bp">Blood Pressure:</string>
    <string name="friend_hr">Pulse:</string>
    <string name="friend_measure_time">Measure Time:</string>
    <string name="friend_add_phone_number">Phone Nr:%s</string>
    <string name="friend_add_invite">Invite</string>
    <string name="friend_add_have_monitored">Notify</string>
    <string name="friend_add_monitor">Add</string>
    <string name="friend_phone_contact">Contacts</string>
    <string name="i_health_report">Health Weekly</string>
    <string name="i_disease_history">Medical History</string>
    <string name="i_font_size">Font Size</string>
    <string name="i_exception">Notifications</string>
    <string name="i_other">Others</string>
    <string name="i_bond_bracelet">Bind Mystrace</string>
    <string name="i_bracelet">Mystrace</string>
    <string name="i_sync_time">Auto Measure Sync time \n%s</string>
    <string name="bind_guide">Tap the button on the front of Mystrace to switch to the battery display. Press and hold the button until Mystrace vibrates and displays a 4 digits number. When the same number appears below, tap to select it.</string>
    <string name="bind_do_you_want_sync_bracelet_setting">Whether to synchronize setting information?</string>
    <string name="bind_you_can_sync_your_setting">There are some information you previously set, you can use them on this device.</string>
    <string name="bind_not_sync">No</string>
    <string name="bind_sync">Yes</string>
    <string name="bracelet_info_whether_show">Set the information displayed on the device</string>
    <string name="bracelet_info_display_config">Device Display Settings</string>
    <string name="bracelet_info_display_time">Time</string>
    <string name="bracelet_info_display_bp">Blood Pressure</string>
    <string name="bracelet_info_display_v0">Blood Viscosity</string>
    <string name="bracelet_info_display_step">Steps</string>
    <string name="bracelet_info_display_distance">Distance</string>
    <string name="bracelet_info_display_heat">Calories</string>
    <string name="bracelet_info_display_power">Remaining battery</string>
    <string name="setting_bracelet_help">Mystrace Q&#036;A</string>
    <string name="other_about_us">About Mystrace</string>
    <string name="help_title0">Mystrace Q&#036;A</string>
    <string name="help_title1">Does your phone have power?</string>
    <string name="help_title2">Check if the band is connected to another phone?</string>
    <string name="help_title3">Try to restart your Bluetooth.</string>
    <string name="help_title4">Restart your phone</string>
    <string name="help_content1">Keep the band in charge</string>
    <string name="help_content2">Turn off the Bluetooth on another phone, and bind your Mystrace to your phone.</string>
    <string name="help_content3">If your Mystrace has power, and still cannot find your Mystrace even when your phone is close to your Mystrace, try to restart your phone Bluetooth. </string>
    <string name="help_content4">If restarting Bluetooth does not work, try to restart your phone.</string>
    <string name="measure_pw">Blood Pressure</string>
    <string name="measure_ecg">ECG</string>
    <string name="logout">Logout</string>
    <string name="setting">Setting</string>
    <string name="setting_privacy">Privacy</string>
    <string name="account_security">Accounts &#038; Security</string>
    <string name="setting_general">General</string>
    <string name="setting_help_feedback">Help &#038; Feedback</string>
</resources>