<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>
        <import type="android.view.View" />
        <variable
            name="model"
            type="com.mgtech.maiganapp.viewmodel.MainViewModel" />
    </data>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/background_grey"
        android:orientation="vertical">

        <com.mgtech.maiganapp.widget.MainBottomView
            android:id="@+id/bottomNavigatorView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:center_popup_text_color="@color/black_text"
            app:center_popup_text_left="@string/measure_ecg"
            app:center_popup_text_right="@string/measure_pw"
            app:item_src_0="@drawable/main_navigator_home"
            app:item_src_1="@drawable/main_navigator_medication"
            app:item_src_2="@drawable/main_navigator_relation"
            app:item_src_3="@drawable/main_navigator_mine"
            app:item_title_0="@string/activity_main_bottom_home"
            app:item_title_1="@string/activity_main_bottom_health_manage"
            app:item_title_2="@string/activity_main_bottom_friend"
            app:item_title_3="@string/activity_main_bottom_me"
            app:selectedColor="@color/primaryBlue"
            app:unSelectedColor="@color/light_text"
            android:layout_alignParentBottom="true"
            android:elevation="10dp"
            android:visibility="visible" />

        <FrameLayout
            android:id="@+id/container"
            android:layout_width="match_parent"
            android:layout_height="match_parent"/>

    </RelativeLayout>
</layout>