<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

        <variable
            name="model"
            type="com.mgtech.maiganapp.viewmodel.DefaultViewModel" />
    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white"
        android:orientation="vertical">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="@color/white"
            android:elevation="2dp"
            android:orientation="horizontal"
            app:contentInsetEnd="0dp"
            app:contentInsetLeft="0dp"
            app:contentInsetRight="0dp"
            app:contentInsetStart="0dp"
            app:paddingEnd="0dp"
            app:paddingStart="0dp">

            <include layout="@layout/layout_back_black"
                android:id="@+id/btn_back"/>

            <TextView
                android:id="@+id/tv_title"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:gravity="center"
                android:text="@string/setting_bracelet_help"
                android:textColor="@color/primary_text"
                android:textSize="@dimen/top_bar_title" />

        </androidx.appcompat.widget.Toolbar>

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="@dimen/normal_padding"
                android:orientation="vertical">

                <TextView
                    android:layout_marginTop="@dimen/narrow_padding"
                    android:textColor="@color/primary_text"
                    android:textSize="@dimen/subhead_material"
                    android:layout_marginBottom="@dimen/large_padding"
                    android:text="@string/help_title0"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />

                <TextView
                    android:text="@string/help_title1"
                    style="@style/style_help_title_text"/>

                <TextView
                    android:text="@string/help_content1"
                    style="@style/style_help_content_text"/>

                <TextView
                    android:text="@string/help_title2"
                    style="@style/style_help_title_text"/>

                <TextView
                    android:text="@string/help_content2"
                    style="@style/style_help_content_text"/>

                <TextView
                    android:text="@string/help_title3"
                    style="@style/style_help_title_text"/>

                <TextView
                    android:text="@string/help_content3"
                    style="@style/style_help_content_text"/>

                <TextView
                    android:text="@string/help_title4"
                    style="@style/style_help_title_text"/>

                <TextView
                    android:text="@string/help_content4"
                    style="@style/style_help_content_text"/>

                <!--<TextView-->
                    <!--android:text="@string/help_title5"-->
                    <!--style="@style/style_help_title_text"/>-->

                <!--<TextView-->
                    <!--android:text="@string/help_content5"-->
                    <!--style="@style/style_help_content_text"/>-->
            </LinearLayout>
        </ScrollView>

    </LinearLayout>
</layout>