<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:background="@color/background_grey"
    android:padding="@dimen/normal_padding"
    android:layout_height="wrap_content">

    <TextView
        android:layout_marginTop="@dimen/xnarrow_padding"
        android:id="@+id/tv_from_picture"
        android:text="@string/sheet_photo_album"
        android:gravity="center"
        android:textColor="@color/black_text"
        android:textSize="@dimen/subhead_material"
        android:background="@drawable/white_card_4dp_corner_bg"
        android:layout_width="match_parent"
        android:layout_height="@dimen/normal_height" />

    <TextView
        android:layout_marginTop="4dp"
        android:id="@+id/tv_from_camera"
        android:text="@string/sheet_camera"
        android:gravity="center"
        android:textColor="@color/black_text"
        android:textSize="@dimen/subhead_material"
        android:background="@drawable/white_card_4dp_corner_bg"
        android:layout_width="match_parent"
        android:layout_height="@dimen/normal_height" />

    <TextView
        android:layout_marginTop="@dimen/normal_padding"
        android:id="@+id/tv_cancel"
        android:text="@string/cancel"
        android:gravity="center"
        android:textColor="@color/black_text"
        android:textSize="@dimen/subhead_material"
        android:background="@drawable/white_card_4dp_corner_bg"
        android:layout_width="match_parent"
        android:layout_height="@dimen/normal_height" />
</LinearLayout>