<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:gravity="center_horizontal"
    android:minWidth="200dp"
    android:orientation="vertical">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:padding="@dimen/normal_padding"
                android:background="@color/colorPrimary"
                android:textSize="@dimen/subhead_material"
                android:textColor="@color/white"
                android:gravity="center_vertical"
                android:text="@string/bind_do_you_want_sync_bracelet_setting"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:minHeight="@dimen/normal_height" />

            <TextView
                android:text="@string/bind_you_can_sync_your_setting"
                android:layout_marginStart="@dimen/normal_padding"
                android:layout_marginEnd="@dimen/normal_padding"
                android:layout_marginBottom="@dimen/normal_padding"
                android:layout_marginTop="@dimen/normal_padding"
                android:textSize="@dimen/body_1_material"
                android:textColor="@color/primary_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="@dimen/narrow_height"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/btn_cancel"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_gravity="center"
                    android:layout_weight="1"
                    android:background="@drawable/selector_set_bracelet_config_cancel"
                    android:text="@string/bind_not_sync"
                    android:textColor="@color/colorPrimaryDark"
                    android:textSize="@dimen/subhead_material" />

                <Button
                    android:id="@+id/btn_bond"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="match_parent"
                    android:layout_gravity="center"
                    android:background="@drawable/selector_set_bracelet_config_submit"
                    android:text="@string/bind_sync"
                    android:textColor="@color/white"
                    android:textSize="@dimen/subhead_material" />
            </LinearLayout>
        </LinearLayout>


    </androidx.cardview.widget.CardView>


</LinearLayout>